--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Zie ook veel meer op onze website http://nlextract.nl
-Documentatie vind je op: http://nlextract.readthedocs.org
+Documentatie vind je op: http://docs.nlextract.nl
 
 Hieronder wat algemene informatie.
 
