issue #101 - gemeente-provincie  gewijzigd in 2013 die nog niet in de in 2012 koppeling aanwezig waren.

--- a/bag/db/data/README
+++ b/bag/db/data/README
@@ -53,6 +53,9 @@ https://github.com/opengeogroep/NLExtract/issues/82
 
 - gemeente-provincie koppeling
 Komt van CBS en geeft de koppeling gemeente-provincie via de gemeente-code.
-Zie http://www.cbs.nl/nl-NL/menu/methoden/classificaties/overzicht/gemeentelijke-indeling/2012
+Zie
+http://www.cbs.nl/nl-NL/menu/methoden/classificaties/overzicht/gemeentelijke-indeling/<jaar>  bijvoorbeeld
+http://www.cbs.nl/nl-NL/menu/methoden/classificaties/overzicht/gemeentelijke-indeling/2013/
 Deze zal in de regel minder veranderen.
+
 
