--- a/opentopo/README
+++ b/opentopo/README
@@ -15,6 +15,9 @@ Jan Willem van Aalst: geo@imergis.nl
 De bladindeling volgt die van de Basisregistratie Topografie van het Kadaster. Deze kaartbladen zijn niet bedoeld als
 vervanging voor de Top25raster kaartbladen."
 
+Ter info, de kaartbladen van www.opentopo.nl zijn door Frank Steggink (Kadaster) in een Gigapan view geplaatst, waardoor het één kaart wordt:
+
+http://www.gigapan.com/gigapans/142199
 Hieronder wat hulpmiddelen voor OpenTopo.
 Bijvoorbeeld om deze kaarten in een WMS te serveren:
 
