--- a/top10nl/README
+++ b/top10nl/README
@@ -8,3 +8,7 @@ om te zetten naar hanteerbare formaten zoals PostGIS. Tevens bevat Top10Extract 
 
 Documentatie vind je op: http://nlextract.readthedocs.org
 
+Nieuw (3/12/14): onder "etl" map staat laatste versie Top10NL inlezen op basis Stetl ETL
+framework, www.stetl.org
+
+
