--- a/top10nl/bin/README
+++ b/top10nl/bin/README
@@ -6,3 +6,5 @@ naar PostGIS te converteren.
 
 Documentatie voor deze scripts
 vind je op: http://nlextract.readthedocs.org
+
+NB - de meest actuele versie staat onder ../etl en is gebaseerd op Stetl
