--- a/top10nl/etl/README
+++ b/top10nl/etl/README
@@ -1,16 +1,18 @@
 Top10NL inlezen met Stetl (www.stetl.org) ETL framework.
-door: Just van den Broecke
+door: Just van den Broecke,
+GFS en XSLT door Just van den Broecke en Frank Steggink
 
 Deze map bevat de ETL configuratie en commando om via Stetl
 Top10NL vanuit de bron GML bestanden naar verschillende outputs weg te schrijven.
 Standaard is dit PostGIS, maar omdat output via ogr2ogr verloopt kan dit
-elke output zijn die ogr2ogr ondersteunt, bijv SHP, GeoJSON of GeoPackage.
+elke output zijn die ogr2ogr ondersteunt, bijv SHP, GeoJSON of GeoPackage, in theorie ook bijv Oracle.
 
 Om gebruik te maken van Stetl moet de externe GitHub submodule externals/stetl
 aanwezig zijn.
 
-Klonen: git clone --recursive https://github.com/opengeogroep/NLExtract.git
-Stetl komt dan mee, hoeft niet apart geinstalleerd, alleen de dependencies.
+Bij het klonen van de GitHub komt Stetl als volgt mee:
+git clone --recursive https://github.com/opengeogroep/NLExtract.git
+Stetl komt dan mee, hoeft niet apart geinstalleerd, alleen de Stetl-dependencies.
 
 Dependencies Stetl installeren:
 http://www.stetl.org/en/latest/install.html
@@ -28,11 +30,9 @@ options/options-<jouw host naam>.sh
 Stetl configuratie, hoeft niet gewijzigd, alleen indien bijv andere output gewenst:
 etl-top10nl.cfg
 
-Windows
-Nog niet getest!!
-etl-top10nl.cmd
 
 TODO
-command line versie
+Windows (.bat) scripts: etl-top10nl.cmd (nog niet getest)
+
 GUI
 
