readme aangepast top10nl doc

--- a/top10nl/doc/README
+++ b/top10nl/doc/README
@@ -12,3 +12,6 @@ Deze info vind je ook bij Kadaster: http://kadaster.nl/top10nl
 
 Onder de directory 1.0 staat documentatie voor versie 1.0
 
+Nieuw - 25.feb.2015
+- Concept/preview voor de te verwachten versie 1.2
+
