Verplaatsen TOP10NL versie 1.1.1-documentatie

--- a/top10nl/doc/README
+++ b/top10nl/doc/README
@@ -2,16 +2,11 @@ Hieronder staat algemene informatie en XML schema's (XSDs) voor Top10NL.
 Documentatie voor het gebruik van NLExtract vind je via
 http://nlextract.nl of direct op http://nlextract.readthedocs.org
 
-Let op: Top10NL kent momenteel (okt 2012) 2 versies:
+Let op: Top10NL kent momenteel (dec. 2015) 3 versies:
 
-1.0 - leveringen voor september 2012
-1.1.1 - (huidig) leveringen van sept 2012 en later
+1.0   - leveringen voor sept. 2012
+1.1.1 - leveringen vanaf sept. 2012 t/m sept. 2015
+1.2   - (huidig) leveringen vanaf nov. 2015
+Zie de subdirectories met deze namen voor de documentatie die specifiek is voor een bepaalde versie.
 
-We gaan voorlopig uit van versie 1.1.1.
-Deze info vind je ook bij Kadaster: http://kadaster.nl/top10nl
-
-Onder de directory 1.0 staat documentatie voor versie 1.0
-
-Nieuw - 25.feb.2015
-- Concept/preview voor de te verwachten versie 1.2
-
+In NLExtract wordt uitgegaan van versie 1.2, aangezien dat de enige versie is die momenteel door het Kadaster en PDOK uitgeleverd wordt.
