--- a/top10nl/etl/options/README
+++ b/top10nl/etl/options/README
@@ -14,7 +14,11 @@ export PGPASSWORD=mysecretpassword
 export database=top10nl
 export schema=top10nl_feb2015
 
-# maximum aantal features naar XSLT transform en database write
-# bepaalt sterk (RAM) geheugengebruik. 15000-20000 is goed getal
+# Het maximale aantal features dat in een keer met XSLT wordt getransformeerd en
+# naar de database wordt weggeschreven. Dit bepaalt sterk het (RAM)
+# geheugengebruik. 15000 tot 2000 is een goed getal.
 export max_features=15000
+
+# Locatie van Stetl, indien dit niet in ../../externals/stetl staat
+export STETL_HOME=../../../stetl
 
