--- a/bgt/etl/options/README
+++ b/bgt/etl/options/README
@@ -15,7 +15,10 @@ export PGPASSWORD=mysecretpassword
 export database=bgt
 export schema=bgt_yyyymm
 
-# maximum aantal features naar XSLT transform en database write
-# bepaalt sterk (RAM) geheugengebruik. 15000-20000 is goed getal
+# Het maximale aantal features dat in een keer met XSLT wordt getransformeerd en
+# naar de database wordt weggeschreven. Dit bepaalt sterk het (RAM)
+# geheugengebruik. 15000 tot 2000 is een goed getal.
 export max_features=15000
 
+# Locatie van Stetl, indien dit niet in ../../externals/stetl staat
+export STETL_HOME=../../../stetl
