Windows batch-file verwijderd; niet nodig i.v.m. OSGeo4W-shell; zie ook issue #169

--- a/top10nl/etl/README
+++ b/top10nl/etl/README
@@ -31,8 +31,5 @@ Stetl configuratie, hoeft niet gewijzigd, alleen indien bijv andere output gewen
 etl-top10nl.cfg
 
 
-TODO
-Windows (.bat) scripts: etl-top10nl.cmd (nog niet getest)
-
-GUI
-
+TODO:
+* GUI
