--- a/brk/etl/README
+++ b/brk/etl/README
@@ -23,12 +23,19 @@ Downloaden GML
 --------------
 
 Met het hulpscript download-brk.sh <doel map> kan de BRK-DKK eerst gedownload worden naar een doel map.
+Windows: download-brk.cmd <doel map>
 NB, soms zijn de gedonwloade files 0 bytes. Oorzaak is vreemd HTTPS probleem PDOK vermoedelijk.
+
+Op Windows heb je wget en unzip nodig om de bestanden te downloaden. De executables hiervan moeten in de
+PATH environment variabele staan.
+wget: https://eternallybored.org/misc/wget/
+unzip: http://gnuwin32.sourceforge.net/packages/unzip.htm
 
 Commando
 --------
 
 ./etl-brk.sh
+Windows: etl-brk.cmd
 
 Gebruikt default opties (database params etc) uit options/default.args
 
@@ -44,6 +51,7 @@ Een aantal opties kunnen op 2 manieren vervangen worden:
 options/<jouw host naam>.args
 
 2- Expliciet op command line via  ./etl-brk.sh <mijn opties file>.args
+                                  etl-brk.cmd <mijn opties file>.args
 
 Indien methode 2 gebruikt wordt prevaleert deze boven 1 en de default opties!
 
@@ -51,11 +59,6 @@ Database mapping
 ----------------
 gfs/brk.gfs is GDAL/OGR "GFS Template" en bepaalt de mapping van GML elementen/attributen naar PostGIS kolom(namen).
 Maak evt eigen GFS file en specificeer deze in je options/<jouw host naam>.args: bijv gfs_template=gfs/mijnbrk.gfs
-
-TODO
-----
-
-Windows (.bat) scripts: etl-brk.cmd (nog niet gemaakt en getest)
 
 GUI
 
